--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pengpon/vpon_task.git"
+
+    "url": "https://git.heroku.com/websocket-starting.git"
   },
   "keywords": [],
   "author": "",
