--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,7 +26,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -67,7 +67,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7887,
+    "port": 7788,
     "assignNewPortAutomatically": false,
     "enable": true,
     "proxy": {
