--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bufferutil": "4.0.1",
     "express": "4.17.1",
+    "https-proxy-agent": "^3.0.1",
     "socket.io": "2.3.0",
     "utf-8-validate": "5.0.2",
     "ws": "^7.2.0"
