--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bufferutil": "4.0.1",
     "express": "4.17.1",
     "https-proxy-agent": "^3.0.1",
+    "node": "^12.13.0",
     "socket.io": "2.3.0",
     "utf-8-validate": "5.0.2",
     "ws": "^7.2.0"
